Implemented enterprise RBAC authentication system